syntax = "proto3";

package models;

option go_package = "pkg/grpc/models";

message KioskState {
	string content  = 1;
	string title = 2;
	int64 size_w = 3;
	int64 size_h = 4;

	EnumScreenAction action = 5;
}

enum EnumScreenAction {
    START = 0;
	UPDATE = 1;
	STOP = 2;
	POWEROFF = 3;
	POWERON = 4;
}