syntax = "proto3";

package service;

option go_package = "pkg/grpc/service";

import "pkg/grpc/proto/models/kiosk.proto";
import "pkg/grpc/proto/models/errors.proto";

service KioskService {
	rpc startOrUpdate (models.KioskRequest) returns (KioskResponse);
	rpc PowerOnOrOff (models.KioskRequest) returns (KioskResponse);
	rpc Screenshot (models.KioskRequest) returns (KioskResponse);
}

message KioskResponse {
	models.KioskRespose state = 1;
	models.Error error = 2;
}
